Converted sutras to bilingual format.

--- a/01_agama/samyukta/01/SA1_48.md
+++ b/01_agama/samyukta/01/SA1_48.md
@@ -7,97 +7,167 @@ previous: SA1_47.html
 next: SA1_49.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 48 (265). Bubbles and Foam
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at a place on the bank of the Gaṅgā River in Ayodhyā.[\[2\]](#n2){:#ref2}
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二六五） 泡沫</th>
+  <th class='en'>48 (265). Bubbles and Foam</th>
+  <tr>
+    <td title='t125.2.68b29'>如是我聞：一時，佛住阿毘陀處恒河側。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at a place on the bank of the Gaṅgā River in Ayodhyā.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c1'>爾時，世尊告諸比丘：「譬如恒河大水暴起，隨流聚沫，明目士夫諦觀分別；諦觀分別時，無所有、無牢、無實、無有堅固。所以者何？彼聚沫中無堅實故。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Suppose a clear-eyed man closely examines and discerns a mass of floating foam that was produced by the rapids of a great river. When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that mass of foam.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c1'>「如是諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？色無堅實故。</td>
+    <td id='p3'>3. “So it is with whatever forms that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because forms have no solid substance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c8'>「諸比丘！譬如大雨水泡，一起一滅，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼水泡無堅實故。</td>
+    <td id='p4'>4. “Monks, suppose a clear-eyed man closely examines and discerns water bubbles that each appear and then disappear during a heavy rain. When he closely examines and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in the water bubbles.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c8'>「如是，比丘！諸所有受，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以受無堅實故。</td>
+    <td id='p5'>5. “So it is with whatever feelings that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because feelings have no solid substance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c17'>「諸比丘！譬如春末夏初，無雲、無雨，日盛中時，野馬流動，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼野馬無堅實故。</td>
+    <td id='p6'>6. “Monks, suppose that at the end of spring or the beginning of summer a clear-eyed man closely examines, considers, and discerns [the dust of] wild horses drifting on a sunny day without clouds or rain.<sup id="ref3"><a href="#n3">3</a></sup> When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? There is no solid substance in [that dust of] wild horses.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c17'>「如是，比丘！諸所有想，若過去、若未來、若現在，若內、若外，若麤、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以想無堅實故。</td>
+    <td id='p7'>7. “So it is with whatever conceptions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because conceptions have no solid substance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c25'>「諸比丘！譬如明目士夫求堅固材，執持利斧，入於山林，見大芭蕉樹，𦟛直長大，即伐其根，斬截其峯，葉葉次剝，都無堅實，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼芭蕉無堅實故。</td>
+    <td id='p8'>8. “Monks, suppose a clear-eyed man goes searching for a hardwood tree with an axe in hand. He goes into a mountain forest and sees a large plantain tree that’s balanced, straight, and huge. He attacks its root, chopping it at its peak. He strips off its leaves one after another, but it has no solid core when it’s closely examined, considered, and discerned. When he closely examines, considers, and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that plantain tree.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.68c25'>「如是，比丘！諸所有行，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以彼諸行無堅實故。</td>
+    <td id='p9'>9. “So it is with whatever volitions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because volitions have no solid substance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69a7'>「諸比丘！譬如幻師、若幻師弟子，於四衢道頭，幻作象兵、馬兵、車兵、步兵，有智明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼幻無堅實故。</td>
+    <td id='p10'>10. “Monks, suppose an intelligent and clear-eyed man closely examines, considers, and discerns a troop of elephants, cavalry, chariots, or foot soldiers conjured at the head of a crossroads by an illusionist or an illusionist’s apprentice. When he closely examines, considers, and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in those illusions.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69a7'>「如是，比丘！諸所有識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別，諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以識無堅實故。」</td>
+    <td id='p11'>11. “So it is with whatever instances of awareness that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because instances of awareness have no solid substance.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69a16'>爾時，世尊欲重宣此義，而說偈言：</td>
+    <td id='p12'>12. The Bhagavān then restated his meaning by speaking in verse:</td>
+  </tr>
+<tr>
+  <td title='t99.2.xxxx'><ul class='verse'>
+    <li>
+「觀色如聚沫，<br/>
+    受如水上泡，<br/>
+    想如春時燄，<br/>
+    諸行如芭蕉，<br/>
+    諸識法如幻，<br/>
+    日種姓尊說。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Observe form like a mass of foam,<br/>
+    Feeling like bubbles on water,<br/>
+    Conception like a springtime mirage,<br/>
+    Volitions like the plantain tree,<br/>
+    And consciousness like an illusion;<br/>
+    The sun clan’s sage teaches this.<sup id="ref4"><a href="#n4">4</a></sup></li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t99.2.xxxx'><ul class='verse'>
+    <li>周匝諦思惟，<br/>
+    正念善觀察，<br/>
+    無實不堅固，<br/>
+    無有我我所。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Closely considered all around,<br/>
+    Rightly mindful and examined well,<br/>
+    [They’re] without substance and not solid;<br/>
+    Without self or what belongs to self.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t99.2.xxxx'><ul class='verse'>
+    <li>於此苦陰身，<br/>
+    大智分別說，<br/>
+    離於三法者，<br/>
+    身為成棄物，<br/>
+    壽暖及諸識，<br/>
+    離此餘身分，<br/>
+    永棄丘塚間，<br/>
+    如木無識想。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“The great sage discerned and taught<br/>
+    About this body’s painful aggregates.<br/>
+    One who’s free of three things<br/>
+    Has discarded the things that make a person:<br/>
+    Life, warmth, and the types of awareness.<br/>
+    He’s free of these other parts of a person<br/>
+    That’re left forever on the charnel ground<br/>
+    Without awareness or perception like wood.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t99.2.xxxx'><ul class='verse'>
+    <li>此身常如是，<br/>
+    幻為誘愚夫。<br/>
+    如殺如毒刺，<br/>
+    無有堅固者。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“This body is always thus:<br/>
+    An illusion that tricks foolish men<br/>
+    Like a killer or a poison dart.<br/>
+    There’s nothing solid there.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t99.2.xxxx'><ul class='verse'>
+    <li>比丘勤修習，<br/>
+    觀察此陰身，<br/>
+    晝夜常專精，<br/>
+    正智繫念住，<br/>
+    有為行長息，<br/>
+    永得清涼處。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Monks, you must train yourselves diligently<br/>
+    And examine this body’s aggregates.<br/>
+    Stay focused on this both day and night;<br/>
+    Fix your attention there with right knowledge.<br/>
+    When conditioned actions have long been stopped,<br/>
+    Then you’ll find your eternal cooling place.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td title='t125.2.69b3'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p13'>13. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Suppose a clear-eyed man closely examines and discerns a mass of floating foam that was produced by the rapids of a great river. When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that mass of foam.
-{:#p2}
+<hr/>
 
-3\. “So it is with whatever forms that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because forms have no solid substance.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Monks, suppose a clear-eyed man closely examines and discerns water bubbles that each appear and then disappear during a heavy rain. When he closely examines and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in the water bubbles.
-{:#p4}
+<ol>
+<li id="n1">This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.95" target="_blank">SN 22.95</a>. There are also two alternate C. translations (T105 and T106). All four versions are remarkably similar to each other. One of the differences that stands out is that this version in SĀ doesn’t begin by saying that the Buddha saw foam on the river. However, the other two Chinese translations do include this detail like SN 22.96. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>Ayodhyā.</em> C. 阿毘陀 (EMC. •a-bii-da = Pr. <em>avidha-?</em>), P. Ayojjhā, G. Ayoj̄a, S. Ayodhyā. The C. translit. here appears equiv. to S. <em>avidheya</em>, which is a synonym of S. <em>ayodhyā</em> (P. <em>ayojjhā</em>) and lit. means “not subdued.” I’ve adopted the S. equiv. for clarity since it must be an alternate name for the same place, which was a city on the Gaṅgā River and also a kingdom centered there. [<a href="#ref2">back</a>]</li>
+<li id="n3"><em>wild horses drifting</em>. C. 野馬流動, P. <em>marīcikā phandati</em>. It’s unclear whether this expression is based on the original Indic passage or a native idiom describing the visual illusion of a mirage in the distance. The latter seems more likely to me. Clouds of dust were sometimes called “wild horses” in Chinese literature in reference to the great clouds of dust that herds of horses kicked up when running across arid plains. This seems to be an attempt to approx. the meaning of a word like G. <em>mariya</em> (P. <em>marīci</em>).<br/>
+We should note, however, that the same term is translated as C. 燄 (“blazing, flame, mirage”) in the concluding verse below, which is much closer in meaning to <em>marīci</em>. This shows that the translator could have used 燄 as a translation here in the prose passage but chose not to do so. Given that wild horse herds would have been a common sight in Central Asia, which is the likely origin of this version of the <em>sūtra</em>, we shouldn’t dismiss out of hand the possibility that it was a lit. translation of the original text. I therefore have retained the lit. reading of the C. here. [<a href="#ref3">back</a>]</li>
+<li id="n4"><em>sun clan.</em> C. 日種姓, P. <em>ādicca bandhu</em>. The C. here would likely trans. S. <em>ādityagotra</em>, but otherwise this line is identical to the concluding line of similar verses found in several P. <em>sutta</em>s including SN 22.95, which reads: <em>desitādiccabandhunā</em> (e.g., AN 4.14 or 8.29). Apparently, S. <em>āditya</em> (P. <em>ādicca</em>) was considered the clan name of the Buddha’s family. [<a href="#ref4">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “So it is with whatever feelings that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because feelings have no solid substance.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 4 April 2024</p>
 
-6\. “Monks, suppose that at the end of spring or the beginning of summer a clear-eyed man closely examines, considers, and discerns [the dust of] wild horses drifting on a sunny day without clouds or rain.[\[3\]](#n3){:#ref3} When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? There is no solid substance in [that dust of] wild horses.
-{:#p6}
-
-7\. “So it is with whatever conceptions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because conceptions have no solid substance.
-{:#p7}
-
-8\. “Monks, suppose a clear-eyed man goes searching for a hardwood tree with an axe in hand. He goes into a mountain forest and sees a large plantain tree that’s balanced, straight, and huge. He attacks its root, chopping it at its peak. He strips off its leaves one after another, but it has no solid core when it’s closely examined, considered, and discerned. When he closely examines, considers, and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that plantain tree.
-{:#p8}
-
-9\. “So it is with whatever volitions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because volitions have no solid substance.
-{:#p9}
-
-10\. “Monks, suppose an intelligent and clear-eyed man closely examines, considers, and discerns a troop of elephants, cavalry, chariots, or foot soldiers conjured at the head of a crossroads by an illusionist or an illusionist’s apprentice. When he closely examines, considers, and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in those illusions.
-{:#p10}
-
-11\. “So it is with whatever instances of awareness that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because instances of awareness have no solid substance.”
-{:#p11}
-
-12\. The Bhagavān then restated his meaning by speaking in verse:
-{:#p12}
-
-* {:.verse}“Observe form like a mass of foam,<br/>
-Feeling like bubbles on water,<br/>
-Conception like a springtime mirage,<br/>
-Volitions like the plantain tree,<br/>
-And consciousness like an illusion;<br/>
-The sun clan’s sage teaches this.[\[4\]](#n4){:#ref4}
-
-* {:.verse}“Closely considered all around,<br/>
-Rightly mindful and examined well,<br/>
-[They’re] without substance and not solid;<br/>
-Without self or what belongs to self.
-
-* {:.verse}“The great sage discerned and taught<br/>
-About this body’s painful aggregates.<br/>
-One who’s free of three things<br/>
-Has discarded the things that make a person:<br/>
-Life, warmth, and the types of awareness.<br/>
-He’s free of these other parts of a person<br/>
-That’re left forever on the charnel ground<br/>
-Without awareness or perception like wood.
-
-* {:.verse}“This body is always thus:<br/>
-An illusion that tricks foolish men<br/>
-Like a killer or a poison dart.<br/>
-There’s nothing solid there.
-
-* {:.verse}“Monks, you must train yourselves diligently<br/>
-And examine this body’s aggregates.<br/>
-Stay focused on this both day and night;<br/>
-Fix your attention there with right knowledge.<br/>
-When conditioned actions have long been stopped,<br/>
-Then you’ll find your eternal cooling place.”
-
-13\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p13}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.95" target="_blank">SN 22.95</a>. There are also two alternate C. translations (T105 and T106). All four versions are remarkably similar to each other. One of the differences that stands out is that this version in SĀ doesn’t begin by saying that the Buddha saw foam on the river. However, the other two Chinese translations do include this detail like SN 22.95. [\[back\]](#ref1)
-2. {:#n2} <em>Ayodhyā.</em> C. 阿毘陀 (EMC. •a-bii-da = Pr. <em>avidha-?</em>), P. Ayojjhā, G. Ayoj̄a, S. Ayodhyā. The C. translit. here appears equiv. to S. <em>avidheya</em>, which is a synonym of S. <em>ayodhyā</em> (P. <em>ayojjhā</em>) and lit. means “not subdued.” I’ve adopted the S. equiv. for clarity since it must be an alternate name for the same place, which was a city on the Gaṅgā River and also a kingdom centered there. [\[back\]](#ref2)
-3. {:#n3} <em>wild horses drifting</em>. C. 野馬流動, P. <em>marīcikā phandati</em>. It’s unclear whether this expression is based on the original Indic passage or a native idiom describing the visual illusion of a mirage in the distance. The latter seems more likely to me. Clouds of dust were sometimes called “wild horses” in Chinese literature in reference to the great clouds of dust that herds of horses kicked up when running across arid plains. This seems to be an attempt to approx. the meaning of a word like G. <em>mariya</em> (P. <em>marīci</em>).<br/>
-We should note, however, that the same term is translated as C. 燄 (“blazing, flame, mirage”) in the concluding verse below, which is much closer in meaning to <em>marīci</em>. This shows that the translator could have used 燄 as a translation here in the prose passage but chose not to do so. Given that wild horse herds would have been a common sight in Central Asia, which is the likely origin of this version of the <em>sūtra</em>, we shouldn’t dismiss out of hand the possibility that it was a lit. translation of the original text. I therefore have retained the lit. reading of the C. here. [\[back\]](#ref3)
-4. {:#n4} <em>sun clan.</em> C. 日種姓, P. <em>ādicca bandhu</em>. The C. here would likely trans. S. <em>ādityagotra</em>, but otherwise this line is identical to the concluding line of similar verses found in several P. <em>sutta</em>s including SN 22.95, which reads: <em>desitādiccabandhunā</em> (e.g., AN 4.14 or 8.29). Apparently, S. <em>āditya</em> (P. <em>ādicca</em>) was considered the clan name of the Buddha’s family. [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 4 February 2024
-{: .revised}
-
----
+<hr/>
