--- a/01_agama/samyukta/01/SA1_138.md
+++ b/01_agama/samyukta/01/SA1_138.md
@@ -7,74 +7,103 @@ previous: SA1_58.html
 next: SA1_143.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 138 (81). Pūraṇa
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the two-story meeting hall beside Markaṭa Lake of Vaiśālī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（八一） 富蘭那</th>
+  <th class='en'>138 (81). Pūraṇa</th>
+  <tr>
+    <td title='t99.2.20b28'>如是我聞：一時，佛住毘耶離獼猴池側重閣講堂。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the two-story meeting hall beside Markaṭa Lake of Vaiśālī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20b29'>爾時，有離車名摩訶男，日日遊行，往詣佛所。</td>
+    <td id='p2'>2. It was then that there was a Licchavi named Mahānāma<sup id="ref1"><a href="#n1">1</a></sup> who traveled daily to visit the Buddha.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c1'>時，彼離車作是念：「若我早詣世尊所者，世尊及我知識比丘皆悉禪思，我今當詣七菴羅樹阿耆毘外道所。」即往詣彼富蘭那迦葉住處。</td>
+    <td id='p3'>3. That Licchavi man thought to himself, ‘If I visit the Bhagavān in the morning, the Bhagavān and the monks who are my friends will all be meditating. I’ll go visit the ājīvika heretics at Seven Mango Trees.” He then went to visit Pūraṇa Kāśyapa at his residence.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c4'>時，富蘭那迦葉——外道眾主，與五百外道前後圍遶，高聲嬉戲，論說俗事。</td>
+    <td id='p4'>4. Pūraṇa Kāśyapa was the leader of an assembly of another tradition. He was surrounded front and back by five hundred disciples who were loud and boisterous as they discussed ordinary affairs.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c6'>時，富蘭那迦葉遙見離車摩訶男來，告其眷屬，令寂靜住：「汝等默然！是離車摩訶男是沙門瞿曇弟子，此是沙門瞿曇白衣弟子，毘耶離中最為上首，常樂靜寂，讚歎寂靜，彼所之詣寂靜之眾，是故汝等應當寂靜。」</td>
+    <td id='p5'>5. When he saw the Licchavi Mahānāma coming from a distance, Pūraṇa Kāśyapa told his followers to settle down: “Quiet, all of you! This Licchavi Mahānāma is a disciple of the ascetic Gautama. This white-robed disciple of the ascetic Gautama is a high-ranking person in Vaiśālī. He always delights in peace, praises peace, and visits peaceful assemblies; therefore, all of you must be peaceful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c11'>時，摩訶男詣彼眾富蘭那所，與富蘭那共相問訊，相慰勞已，却坐一面。</td>
+    <td id='p6'>6. Mahānāma then paid a visit to Pūraṇa’s assembly, and he exchanged greetings with him. After listening to his troubles, Mahānāma withdrew to sit at one side.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c13'>時，摩訶男語富蘭那言：「我聞富蘭那為諸弟子說法：『無因、無緣眾生有垢，無因、無緣眾生清淨。』世有此論，汝為審有此，為是外人相毀之言？世人所撰，為是法、為非法，頗有世人共論、難問、嫌責以不？」</td>
+    <td id='p7'>7. Mahānāma said to Pūraṇa, “I’ve heard that Pūraṇa teaches his disciples this: ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’ The world has these theories. Has it been put forward by you, or are these words used by those of other traditions to slander you? In the judgement of worldly people, is this Dharma or not Dharma? Haven’t there been worldly people who’ve discussed it with you, questioned it critically, and rejected it?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c17'>富蘭那迦葉言：「實有此論，非世妄傳。我立此論，是如法論，我說此法，皆是順法，無有世人來共難問而呵責者。所以者何？摩訶男！我如是見、如是說：『無因、無緣眾生有垢，無因、無緣眾生清淨。』」</td>
+    <td id='p8'>8. Pūraṇa Kāśyapa said, “I really have this theory; it isn’t a worldly misrepresentation. I established this theory as a theory that accords with Dharma. I teach this Dharma, and I follow the Dharma. There aren’t any worldly people who come to question it critically and reject it. Why is that? Mahānāma, I thus see and thus teach, ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c22'>時，摩訶男聞富蘭那所說，心不喜樂，呵罵已，從坐起去，向世尊所，頭面禮足，却坐一面，以向與富蘭那所論事，向佛廣說。</td>
+    <td id='p9'>9. After he heard what Pūraṇa said, Mahānāma wasn’t delighted and felt insulted, so he got up from his seat and left. He went to the Bhagavān, bowed his head at his feet, and withdrew to sit to one side. He then recounted his conversation with Pūraṇa to the Buddha in detail.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c24'>佛告離車摩訶男：「彼富蘭那為出意語，不足記也。如是富蘭那愚癡，不辨、不善、非因而作是說：『無因、無緣眾生有垢，無因、無緣眾生清淨。』所以者何？有因、有緣眾生有垢，有因、有緣眾生清淨。</td>
+    <td id='p10'>10. The Buddha told the Licchavi Mahānāma, “That Pūraṇa speaks from intellect, which isn’t enough to decide the matter. Thus, Pūraṇa is foolish, undiscerning, and unskillful. He has no cause to say, ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’ Why is that? There are causes and conditions for sentient beings to be defiled, and there are causes and conditions for sentient beings to be purified.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.20c29'>「摩訶男！何因、何緣眾生有垢，何因、何緣眾生清淨？摩訶男！若色一向是苦，非樂、非隨樂、非樂長養、離樂者，眾生不應因此而生樂著。摩訶男！以色非一向是苦，是樂、隨樂、樂所長養、不離樂，是故眾生於色染著；染著故繫，繫故有惱。</td>
+    <td id='p11'>11. “Mahānāma, what are the causes and conditions for sentient beings to be defiled, and what are the causes and conditions for sentient beings to be purified? Mahānāma, if form were solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, form isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to form. They are bound to it because of that defiled attachment, and they’re troubled by that bondage.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.21a5'>「摩訶男！若受、想、行、識一向是苦，非樂、非隨樂、非樂長養、離樂者，眾生不應因此而生樂著。摩訶男！以識非一向是苦，是樂，隨樂、樂所長養、不離樂，是故眾生於識染著；染著故繫，繫故生惱。摩訶男！是名有因、有緣眾生有垢。</td>
+    <td id='p12'>12. “Mahānāma, if feeling … conception … volition … awareness was solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, awareness isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to awareness. They are bound to it because of that defiled attachment, and they’re troubled by that bondage. Mahānāma, these are called the causes and conditions for sentient beings to be defiled.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.21a11'>「摩訶男！何因、何緣眾生清淨？摩訶男！若色一向是樂，非苦、非隨苦、非憂苦長養、離苦者，眾生不應因色而生厭離。摩訶男！以色非一向樂，是苦、隨苦、憂苦長養、不離苦，是故眾生厭離於色；厭故不樂，不樂故解脫。</td>
+    <td id='p13'>13. “Mahānāma, what are the causes and conditions for sentient beings to be purified? Mahānāma, if form were solely pleasant, not painful, not disagreeable, didn’t nurture pain, and was free of pain, sentient beings wouldn’t become disillusioned with form as a result. Mahānāma, form isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with form. They don’t enjoy it because of that disillusionment, and they’re liberated by not enjoying it.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.21a16'>「摩訶男！若受、想、行、識一向是樂，非苦、非隨苦、非憂苦長養、離苦者，眾生不應因識而生厭離。摩訶男！以受、想、行、識非一向樂，是苦、隨苦、憂苦長養、不離苦，是故眾生厭離於識；厭故不樂，不樂故解脫。摩訶男！是名有因、有緣眾生清淨。」</td>
+    <td id='p14'>14. “Mahānāma, if feeling … conception … volition … awareness was solely pleasant, not painful, not disagreeable, didn’t nurturing pain, and was free of pain, sentient beings wouldn’t become disillusioned with awareness as a result. Mahānāma, awareness isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with awareness. They don’t enjoy it because of that disillusionment, and they’re liberated by not enjoying it. Mahānāma, these are called the causes and conditions for sentient beings to be purified.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.21a21'>時，摩訶男聞佛所說，歡喜隨喜，禮佛而退。</td>
+    <td id='p15'>15. When he heard what the Buddha taught, Mahānāma rejoiced and felt glad. He bowed to the Buddha and withdrew.</td>
+  </tr>
+<tr>
+  <td title='t99.2.21a23'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='t99.2.21a23'><ul class='verse'>
+    <li>知法及重擔，<br/>
+    往詣、觀、欲貪，<br/>
+    生及與略說，<br/>
+    法印、富蘭那。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[126] Knowing Dharma, [127] heavy burden,<br/>
+    [128] Opportunity, ([129] difference,) [130] examination, [131] desire,<br/>
+    [132] Growth, [133-6] a brief teaching,<br/>
+    [137] Dharma seal, and [138] Pūraṇa.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that there was a Licchavi named Mahānāma[\[2\]](#n2){:#ref2} who traveled daily to visit the Buddha.
-{:#p2}
+<hr/>
 
-3\. That Licchavi man thought to himself, ‘If I visit the Bhagavān in the morning, the Bhagavān and the monks who are my friends will all be meditating. I’ll go visit the ājīvika heretics at Seven Mango Trees.” He then went to visit Pūraṇa Kāśyapa at his residence.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. Pūraṇa Kāśyapa was the leader of an assembly of another tradition. He was surrounded front and back by five hundred disciples who were loud and boisterous as they discussed ordinary affairs.
-{:#p4}
+<ol>
+<li id="n1">This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.60" target="_blank">SN 22.60</a>. [<a href="#ref1">back</a>]</li>
+<li id="n1"><em></em>. C. 摩訶男 (EMC. mua-ha-nəm = Pr. <em>mahanam[a]</em>), P. <em>mahāli</em>. This was a common transliteration for the disciple Mahānāma, but this is not the same person here in this <em>sūtra</em>. In SN 22.60, his name is Mahāli. [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. When he saw the Licchavi Mahānāma coming from a distance, Pūraṇa Kāśyapa told his followers to settle down: “Quiet, all of you! This Licchavi Mahānāma is a disciple of the ascetic Gautama. This white-robed disciple of the ascetic Gautama is a high-ranking person in Vaiśālī. He always delights in peace, praises peace, and visits peaceful assemblies; therefore, all of you must be peaceful.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 4 April 2024</p>
 
-6\. Mahānāma then paid a visit to Pūraṇa’s assembly, and he exchanged greetings with him. After listening to his troubles, Mahānāma withdrew to sit at one side.
-{:#p6}
-
-7\. Mahānāma said to Pūraṇa, “I’ve heard that Pūraṇa teaches his disciples this: ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’ The world has these theories. Has it been put forward by you, or are these words used by those of other traditions to slander you? In the judgement of worldly people, is this Dharma or not Dharma? Haven’t there been worldly people who’ve discussed it with you, questioned it critically, and rejected it?”
-{:#p7}
-
-Pūraṇa Kāśyapa said, “I really have this theory; it isn’t a worldly misrepresentation. I established this theory as a theory that accords with Dharma. I teach this Dharma, and I follow the Dharma. There aren’t any worldly people who come to question it critically and reject it. Why is that? Mahānāma, I thus see and thus teach, ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’”
-
-
-8\. After he heard what Pūraṇa said, Mahānāma wasn’t delighted and felt insulted, so he got up from his seat and left. He went to the Bhagavān, bowed his head at his feet, and withdrew to sit to one side. He then recounted his conversation with Pūraṇa to the Buddha in detail.
-{:#p8}
-
-9\. The Buddha told the Licchavi Mahānāma, “That Pūraṇa speaks from intellect, which isn’t enough to decide the matter. Thus, Pūraṇa is foolish, undiscerning, and unskillful. He has no cause to say, ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’ Why is that? There are causes and conditions for sentient beings to be defiled, and there are causes and conditions for sentient beings to be purified.
-{:#p9}
-
-10\. “Mahānāma, what are the causes and conditions for sentient beings to be defiled, and what are the causes and conditions for sentient beings to be purified? Mahānāma, if form were solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, form isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to form. They are bound to it because of that defiled attachment, and they’re troubled by that bondage.
-{:#p10}
-
-11\. “Mahānāma, if feeling … conception … volition … consciousness was solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, consciousness isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to consciousness. They are bound to it because of that defiled attachment, and they’re troubled by that bondage. Mahānāma, these are called the causes and conditions for sentient beings to be defiled.
-{:#p11}
-
-12\. “Mahānāma, what are the causes and conditions for sentient beings to be purified? Mahānāma, if form were solely pleasant, not painful, not disagreeable, didn’t nurture pain, and was free of pain, sentient beings wouldn’t become disillusioned with form as a result. Mahānāma, form isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with form. They don’t enjoy it because of that disillusionment, and they’re liberated by not enjoying it.
-{:#p12}
-
-13\. “Mahānāma, if feeling … conception … volition … consciousness was solely pleasant, not painful, not disagreeable, didn’t nurturing pain, and was free of pain, sentient beings wouldn’t become disillusioned with consciousness as a result. Mahānāma, consciousness isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with consciousness. They don’t enjoy it because of that disillusionment, and they’re liberated by not enjoying it. Mahānāma, these are called the causes and conditions for sentient beings to be purified.”
-{:#p13}
-
-14\. When he heard what the Buddha taught, Mahānāma rejoiced and felt glad. He bowed to the Buddha and withdrew.
-{:#p14}
-
-#### Summary Verse
-
-* {:.verse}[126] Knowing Dharma, [127] heavy burden,\\
-[128] Opportunity, ([129] difference,) [130] examination, [131] desire,\\
-[132] Growth, [133-6] a brief teaching,\\
-[137] Dharma seal, and [138] Pūraṇa.
-
----
-
-### Notes
-
-1. {:#n1} This sūtra is parallel with [SN 22.60](https://suttacentral.net/sn22.60){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} Ch. 摩訶男. This is the common transliteration for the disciple Mahānāma, but this is not the same person. In [SN 22.60](https://suttacentral.net/sn22.60){:target="_blank"}, his name is Mahāli. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 17 October 2022
-{: .revised}
-
----
+<hr/>
