--- a/01_agama/samyukta/01/SA1_143.md
+++ b/01_agama/samyukta/01/SA1_143.md
@@ -7,42 +7,57 @@ previous: SA1_138.html
 next: SA1_145.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 143 (86). Impermanent
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（八六） 無常</th>
+  <th class='en'>143 (86). Impermanent</th>
+  <tr>
+    <td title='t125.2.22a6'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a7'>爾時，世尊告諸比丘：「若無常色有常者，彼色不應有病、有苦，亦不應於色有所求，欲令如是、不令如是。以色無常故，於色有病、有苦生，亦得不欲令如是、不令如是。受、想、行、識亦復如是。比丘！於意云何？色為常、為無常耶？」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If impermanent form were permanent, that form wouldn’t have illness and pain, nor would one seek from form: ‘Let it be so,’ or ‘Let it not be so.’ Illness and pain arise in form because it’s impermanent, and that’s why it becomes something undesired: ‘Let it be so,’ or ‘Let it not be so.’ <em>Feeling, conception, volition, and awareness are likewise.</em> Monks, what do you think? Is form permanent, or is it impermanent?”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a12'>比丘白佛：「無常。世尊！」</td>
+    <td>The monks said to the Buddha, “Impermanent, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a13'>「比丘！無常為是苦不？」</td>
+    <td id='p3'>3. “Monks, what’s impermanent is painful, isn’t it?”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a13'>比丘白佛：「是苦。世尊！」</td>
+    <td>The monks said to the Buddha, “It’s painful, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a14'>「比丘！若無常、苦，是變易法，多聞聖弟子於中寧見是我、異我、相在不？」</td>
+    <td id='p4'>4. “Monks, if something is impermanent and painful, it’s liable to change. Would well-versed noble disciples see this as a self, what’s other than self, or either of them present in the other?”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a15'>比丘白佛：「不也，世尊！」</td>
+    <td>The monks said to the Buddha, “No, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a16'>「受、想、行、識亦復如是。是故，比丘！諸所有色，若過去、若未來、若現在，若內、若外，若麤、若細，若好、若醜，若遠、若近，彼一切非我、非我所如實知。受、想、行、識亦復如是。</td>
+    <td id='p5'>5. “<em>Feeling, conception, volition, and awareness are likewise.</em> Therefore, monks, whatever forms exist, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, distant or near, they are all not self and don’t belong to self when they’re truly known. <em>Feeling, conception, volition, and awareness are likewise.</em></td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a19'>「多聞聖弟子正觀於色，正觀已，於色生厭、離欲、不樂、解脫；受、想、行、識，生厭、離欲、不樂、解脫：『我生已盡，梵行已立，所作已作，自知不受後有。』」</td>
+    <td id='p6'>6. “Well-versed noble disciples correctly observe form. After correctly observing it, they become disillusioned with form, part with desire for it, don’t enjoy it, and are liberated from it. They become disillusioned with feeling … conception … volition … awareness, part with desire for it, don’t enjoy it, and are liberated from it. ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.22a23'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p7'>7. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table> 
 
-2\. It was then that the Bhagavān addressed the monks, “If impermanent form were permanent, that form wouldn’t have illness and pain, nor would one seek from form: ‘Let it be so,’ or ‘Let it not be so.’ Illness and pain arise in form because it’s impermanent, and that’s why it becomes something undesired: ‘Let it be so,’ or ‘Let it not be so.’ <em>Feeling, conception, volition, and consciousness are likewise.</em> Monks, what do you think? Is form permanent, or is it impermanent?”
-{:#p2}
+<hr/>
 
-The monks said to the Buddha, “Impermanent, Bhagavān.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 4 April 2024</p>
 
-3\. “Monks, what’s impermanent is painful, isn’t it?”
-{:#p3}
-
-The monks said to the Buddha, “It’s painful, Bhagavān.”
-
-4\. “Monks, if something is impermanent and painful, it’s liable to change. Would well-versed noble disciples see this as a self, what’s other than self, or either of them present in the other?”
-{:#p4}
-
-The monks said to the Buddha, “No, Bhagavān.”
-
-5\. “<em>Feeling, conception, volition, and consciousness are likewise.</em> Therefore, monks, whatever forms exist, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, distant or near, they are all not self and don’t belong to self when they’re truly known. <em>Feeling, conception, volition, and consciousness are likewise.</em>
-{:#p5}
-
-6\. “Well-versed noble disciples correctly observe form. After correctly observing it, they become disillusioned with form, part with desire for it, don’t enjoy it, and are liberated from it. They become disillusioned with feeling … conception … volition … consciousness, part with desire for it, don’t enjoy it, and are liberated from it. ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
-{:#p6}
-
-7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p7}
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
