--- a/01_agama/samyukta/01/SA1_49.md
+++ b/01_agama/samyukta/01/SA1_49.md
@@ -7,49 +7,61 @@ previous: SA1_48.html
 next: SA1_50.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 49 (266). Lack of Knowledge
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二六六） 無知</th>
+  <th class='en'>49 (266). Lack of Knowledge</th>
+  <tr>
+    <td title='t125.2.69b4'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b5'>爾時，佛告諸比丘：「於無始生死，無明所蓋，愛結所繫，長夜輪迴，不知苦之本際；有時長久不雨，地之所生百穀草木，皆悉枯乾。諸比丘！若無明所蓋，愛結所繫，眾生生死輪迴，愛結不斷，不盡苦邊。</td>
+    <td id='p2'>2. It was then that the Buddha addressed the monks, “The starting point of suffering is unknown [to sentient beings who] circulate through beginningless births and deaths while shrouded by ignorance and tied up by the bond of craving. There are droughts that last a long time, when the hundred grains, plants, and trees that grow on the land all wither and dry up. Monks, while they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b5'>「諸比丘！有時長夜不雨，大海水悉皆枯竭。諸比丘！無明所蓋，愛結所繫，眾生生死輪迴，愛結不斷，不盡苦邊。</td>
+    <td id='p3'>3. “Monks, there are times when it doesn’t rain for a long night,<sup id="ref2"><a href="#n2">2</a></sup> and all the water of the oceans dry up. Monks, while they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b5'>諸比丘！有時長夜須彌山王皆悉崩落。無明所蓋，愛結所繫，眾生長夜生死輪迴，愛結不斷，不盡苦邊。諸比丘！有時長夜此大地悉皆敗壞，而眾生無明所蓋，愛結所繫，眾生長夜生死輪迴，愛結不斷，不盡苦邊。</td>
+    <td id='p4'>4. “Monks, there’s a time when Sumeru the King of Mountains is completely broken up for a long night. While they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b5'>諸比丘！有時長夜此大地悉皆敗壞，而眾生。無明所蓋，愛結所繫，眾生長夜生死輪迴，愛結不斷，不盡苦邊。</td>
+    <td id='p5'>5. “Monks, there’s a time when this Earth is completely destroyed for a long night. While they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b17'>「比丘！譬如狗子繫柱，彼繫不斷，長夜繞柱，輪迴而轉。如是，比丘！愚夫眾生不如實知色、色集、色滅、色味、色患、色離，長夜輪迴，順色而轉。如是不如實知受、想、行、識、識集、識滅、識味、識患、識離，長夜輪迴，順識而轉。</td>
+    <td id='p6'>6. “Monks, it’s like a dog tied to a post. While that tie isn’t broken, he’ll go around that post for a long night, turning as he circles it. In this way, monks, foolish sentient beings who don’t truly know form, the formation of form, the cessation of form, the enjoyment of form, the trouble of form, and the escape from form circulate around for a long night, turning as they follow form. In this way, [foolish sentient beings] who don’t truly know feeling … conception … volition … consciousness, the formation of consciousness, the cessation of consciousness, the enjoyment of consciousness, the trouble of consciousness, and the escape from consciousness, circulate around for a long night, turning as they follow consciousness.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b17'>「諸比丘！隨色轉、隨受轉、隨想轉、隨行轉、隨識轉。隨色轉故，不脫於色，隨受、想、行、識轉故，不脫於識。以不脫故，不脫生、老、病、死、憂、悲、惱、苦。</td>
+    <td id='p7'>7. “Monks, they turn to follow form, turn to follow feeling, turn to follow conception, turn to follow volition, and turn to follow consciousness. Because they turn to follow form, they aren’t freed from form. Because they turn to follow feeling … conception … volition … consciousness, they aren’t freed from consciousness. Not being freed from them, they aren’t freed from birth, old age, illness, death, sorrow, lamentation, trouble, and pain.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b17'>「多聞聖弟子如實知色、色集、色滅、色味、色患、色離，如實知受、想、行、識、識集、識滅、識味、識患、識離故，不隨識轉。不隨轉故，脫於色，脫於受、想、行、識，我說脫於生、老、病、死、憂、悲、惱、苦。」</td>
+    <td id='p8'>8. “When a well-versed noble disciple truly knows form, the formation of form, cessation of form, enjoyment of form, trouble of form, and escape from form … truly knows feeling … conception … volition … consciousness, the formation of consciousness, the cessation of consciousness, the enjoyment of consciousness, the trouble of consciousness, and the escape from consciousness, they don’t turn to follow consciousness. Not turning to follow it, they are freed from form, freed from feeling … conception … volition … consciousness. I say they are freed from birth, old age, illness, death, sorrow, lamentation, trouble, and pain.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.69b29'>佛說此經已。時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p9'>9. After he spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Buddha addressed the monks, “The starting point of suffering is unknown [to sentient beings who] circulate through beginningless births and deaths while shrouded by ignorance and tied up by the bond of craving. There are droughts that last a long time, when the hundred grains, plants, and trees that grow on the land all wither and dry up. Monks, while they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.
-{:#p2}
+<hr/>
 
-3\. “Monks, there are times when it doesn’t rain for a long night, and all the water of the oceans dry up. Monks, while they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Monks, there’s a time when Sumeru the King of Mountains is completely broken up for a long night. While they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.
-{:#p4}
+<ol>
+<li id="n1">This and the next <em>sūtra</em> together represent a variant of <a href="https://suttacentral.net/sn22.99" target="_blank">SN 22.99</a>. It’s only slightly different in structure and includes the same explanatory similes. However, the ignorance that causes sentient beings to be trapped in the cycle of birth and death is defined here as not knowing the aggregates and their formation, cessation, enjoyment, trouble, and escape. In SN 22.99, ignorance is described as taking the aggregates as self. The next <em>sūtra</em> continues this discourse, taking the simile of the dog tied to a post as a point of departure. <a href="SA1_50.html" target="_blank">SĀ 1.50</a> appears to be a commentary that became a companion <em>sūtra</em> to this one. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>for a long night</em>. C. 長夜, P. <em>dīgha ratti</em>, S. <em>dīrgha rātri</em>. This was a poetic way of saying “for eons,” as this <em>sūtra</em> makes clear by equating it with cosmological events. The eons that pass after the world is destroyed really can be called a literal long night, since there is no sun or moon. Sentient beings during this interval exist only in the heavens above the Brahma world. Usu., the darkness of the long night is metaphorical, as sentient beings cycle through eons of birth and death in ignorance. This expression doesn’t occur in SN 22.99, but it is found in other Theravāda sources. [<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Monks, there’s a time when this Earth is completely destroyed for a long night. While they’re shrouded by ignorance and tied up by the bond of craving, sentient beings will circulate through births and deaths. They haven’t cut the bond of craving nor reached the end of suffering.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 4 April 2024</p>
 
-6\. “Monks, it’s like a dog tied to a post. While that tie isn’t broken, he’ll go around that post for a long night, turning as he circles it. In this way, monks, foolish sentient beings who don’t truly know form, the formation of form, the cessation of form, the enjoyment of form, the trouble of form, and the escape from form circulate around for a long night, turning as they follow form. In this way, [foolish sentient beings] who don’t truly know feeling … conception … volition … consciousness, the formation of consciousness, the cessation of consciousness, the enjoyment of consciousness, the trouble of consciousness, and the escape from consciousness, circulate around for a long night, turning as they follow consciousness.
-{:#p6}
-
-7\. “Monks, they turn to follow form, turn to follow feeling, turn to follow conception, turn to follow volition, and turn to follow consciousness. Because they turn to follow form, they aren’t freed from form. Because they turn to follow feeling … conception … volition … consciousness, they aren’t freed from consciousness. Not being freed from them, they aren’t freed from birth, old age, illness, death, sorrow, lamentation, trouble, and pain.
-{:#p7}
-
-8\. “When a well-versed noble disciple truly knows form, the formation of form, cessation of form, enjoyment of form, trouble of form, and escape from form … truly knows feeling … conception … volition … consciousness, the formation of consciousness, the cessation of consciousness, the enjoyment of consciousness, the trouble of consciousness, and the escape from consciousness, they don’t turn to follow consciousness. Not turning to follow it, they are freed from form, freed from feeling … conception … volition … consciousness. I say they are freed from birth, old age, illness, death, sorrow, lamentation, trouble, and pain.”
-{:#p8}
-
-9\. After he spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} This and the next <em>sūtra</em> together represent a variant of <a href="https://suttacentral.net/sn22.99" target="_blank">SN 22.99</a>. It’s only slightly different in structure and includes the same explanatory similes. However, the ignorance that causes sentient beings to be trapped in the cycle of birth and death is defined here as not knowing the aggregates and their formation, cessation, enjoyment, trouble, and escape. In SN 22.99, ignorance is described as taking the aggregates as self. The next <em>sūtra</em> continues this discourse, taking the simile of the dog tied to a post as a point of departure. <a href="SA1_50.html" target="_blank">SĀ 1.50</a> appears to be a commentary that became a companion <em>sūtra</em> to this one. [\[back\]](#ref1)
-2. {:#n2} <em>for a long night</em>. C. 長夜, P. <em>dīgha ratti</em>, S. <em>dīrgha rātri</em>. This was a poetic way of saying “for eons,” as this <em>sūtra</em> makes clear by equating it with cosmological events. The eons that pass after the world is destroyed really can be called a literal long night, since there is no sun or moon. Sentient beings during this interval exist only in the heavens above the Brahma world. Usu., the darkness of the long night is metaphorical, as sentient beings cycle through eons of birth and death in ignorance. This expression doesn’t occur in SN 22.99, but it is found in other Theravāda sources. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 9 January 2024
-{: .revised}
-
----
+<hr/>
