--- a/01_agama/samyukta/01/SA1_53.md
+++ b/01_agama/samyukta/01/SA1_53.md
@@ -7,60 +7,74 @@ previous: SA1_52.html
 next: SA1_54.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 53 (270). The Concept of Impermanence
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二七〇） 無常想</th>
+  <th class='en'>53 (270). The Concept of Impermanence</th>
+  <tr>
+    <td title='t125.2.70c2'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c3'>爾時，世尊告諸比丘：「無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。譬如田夫，於夏末秋初深耕其地，發荄斷草。如是，比丘！無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When the concept of impermanence is cultivated and cultivated often,<sup id="ref2"><a href="#n2">2</a></sup> it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.<sup id="ref3"><a href="#n3">3</a></sup> It’s like a farmer who first tills his soil deeply in summer and late autumn to cut the initial roots of weeds. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c7'>「譬如，比丘！如人刈草，手攬其端，舉而抖擻，萎枯悉落，取其長者。如是，比丘！無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p3'>3. “Monks, it’s like someone harvesting grass who grabs it with their hand, pulls it up, and shakes the dirt off of it. Then, it withers and dries up when taken after it has grown tall. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c10'>「譬如菴羅果著樹，猛風搖條，果悉墮落。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p4'>4. “It’s like mango fruits that are still on the tree. When a strong wind blows the branches about, the fruit all fall to the ground. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c13'>「譬如樓閣，中心堅固，眾材所依，攝受不散。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p5'>5. “It’s like the sturdy center of a multi-story building upon which many timbers depend.<sup id="ref4"><a href="#n4">4</a></sup> It brings them together so that they don’t scatter. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c15'>「譬如一切眾生跡，象跡為大，能攝受故。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p6'>6. “It’s like an elephant’s footprint, which is the largest footprint of any sentient being because the others fit inside of it.<sup id="ref5"><a href="#n5">5</a></sup> Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c18'>「譬如閻浮提一切諸河，悉赴大海，其大海者，最為第一，悉攝受故。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p7'>7. “It’s like the ocean, into which flow all the rivers of Jambudvīpa. That ocean is supreme because it accepts them all. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c21'>「譬如日出，能除一切世間闇冥。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p8'>8. “It’s like the sunrise, which dispels all the world’s darkness. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c23'>「譬如轉輪聖王，於諸小王最上、最勝。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td id='p9'>9. “It’s like a noble wheel-turning king who is the best and greatest of all the lesser kings. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
+  </tr>
+  <tr>
+    <td title='t125.2.70c25'>「諸比丘！云何修無常想，修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明？若比丘於空露地、若林樹間，善正思惟，觀察色無常，受、想、行、識無常。如是思惟，斷一切欲愛、色愛、無色愛、掉、慢、無明。所以者何？無常想者，能建立無我想，聖弟子住無我想，心離我慢，順得涅槃。」</td>
+    <td id='p10'>10. “Monks, how does cultivating the concept of impermanence and cultivating it often stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance? Suppose a monk sits in an open area or among the trees of a grove, and he skillfully and properly contemplates. He observes the impermanence of form, the impermanence of feeling … conception … volition … consciousness. Contemplating in this way, he stops all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance. Why is that? The concept of impermanence establishes the concept of selflessness. When a noble disciple abides in the concept of selflessness, their mind becomes free of self pride, which leads to attainment of Nirvāṇa.”</td>
+  </tr>
+  <tr>
+    <td title='t125.2.71a2'>佛說是經已，時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p11'>11. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When the concept of impermanence is cultivated and cultivated often,[\[2\]](#n2){:#ref2} it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.[\[3\]](#n3){:#ref3} It’s like a farmer who first tills his soil deeply in summer and late autumn to cut the initial roots of weeds. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p2}
+<hr/>
 
-3\. “Monks, it’s like someone harvesting grass who grabs it with their hand, pulls it up, and shakes the dirt off of it. Then, it withers and dries up when taken after it has grown tall. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “It’s like mango fruits that are still on the tree. When a strong wind blows the branches about, the fruit all fall to the ground. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p4}
-
-5\. “It’s like the sturdy center of a multi-story building upon which many timbers depend.[\[4\]](#n4){:#ref4} It brings them together so that they don’t scatter. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p5}
-
-6\. “It’s like an elephant’s footprint, which is the largest footprint of any sentient being because the others fit inside of it.[\[5\]](#n5){:#ref5} Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p6}
-
-7\. “It’s like the ocean, into which flow all the rivers of Jambudvīpa. That ocean is supreme because it accepts them all. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p7}
-
-8\. “It’s like the sunrise, which dispels all the world’s darkness. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p8}
-
-9\. “It’s like a noble wheel-turning king who is the best and greatest of all the lesser kings. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.
-{:#p9}
-
-10\. “Monks, how does cultivating the concept of impermanence and cultivating it often stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance? Suppose a monk sits in an open area or among the trees of a grove, and he skillfully and properly contemplates. He observes the impermanence of form, the impermanence of feeling … conception … volition … consciousness. Contemplating in this way, he stops all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance. Why is that? The concept of impermanence establishes the concept of selflessness. When a noble disciple abides in the concept of selflessness, their mind becomes free of self pride, which leads to attainment of Nirvāṇa.”
-{:#p10}
-
-11\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p11}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> has a direct parallel at <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.102</a>. While the two versions of this <em>sūtra</em> are very similar and clearly derive from a common source, there are a couple divergences.<br/>
+<ol>
+<li id="n1">This <em>sūtra</em> has a direct parallel at <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.102</a>. While the two versions of this <em>sūtra</em> are very similar and clearly derive from a common source, there are a couple divergences.<br/>
 First, the metaphors employed are a little different. In the P. <em>sutta</em>, there are ten parables: the farmer plowing, cutting grass, mango fruit falling, rafters of a house, fragrant roots, fragrant woods, fragrant flowers, the wheel-turning king, the radiance of the moon, and the sun dispelling darkness. This <em>sūtra</em> in SĀ has eight metaphors: the farmer plowing, cutting grass, mango fruit falling, timbers of a building, the elephant’s footprint, the ocean, the sun dispelling darkness, and the wheel-turning king. Comparing these two sets of metaphors, we can see that five are shared and in the same order except for the sunrise, which is placed last in the P. <em>sutta</em>. From this, I would assume that the original version did include a set of parables, but perhaps only four or five of them.<br/>
-The conclusions also provide different explanations about how the concept of impermanence eliminates craving, etc. The P. <em>sutta</em> ties it to recognizing the five aggregates, their origin, and their passing away. The C. <em>sūtra</em> says that contemplating impermanence leads to the realization of selflessness. This eliminates self pride, which in turn leads to the attainment of <em>nirvāṇa</em>. [\[back\]](#ref1)
-2. {:#n2} <em>cultivated and cultivated often</em>. C. 修習多修習, P. <em>bhāvita bahulīkata</em>. 多修習 (“to often cultivate”) fits a lit. reading of P. <em>bahulīkata</em>, which is a compound of <em>bahulī</em> (“much, often”) and <em>kata</em> (“done”). [\[back\]](#ref2)
-3. {:#n3} <em>can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</em> C. 能斷一切欲愛、色愛、無色愛、掉、慢、無明, P. <em>sabbaṁ kāmarāgaṁ pariyādiyati, sabbaṁ rūparāgaṁ pariyādiyati, sabbaṁ bhavarāgaṁ pariyādiyati, sabbaṁ avijjaṁ pariyādiyati, sabbaṁ asmimānaṁ samūhanati</em>. The three cravings of desire, form, and formlessness refer to the desire to be reborn in the three realms of existence (presumably, the heavens of the desire realm, the form realm, and the formless realm). Interestingly, the P. parallel has <em>bhavarāga</em> (“craving of existence”) rather than <em>arūparāga</em> (“craving of formlessness”), which seems intended to make it clear that the first two items refer to realms of rebirth. Other differences are that the P. parallel doesn’t include “agitation” and makes <em>asmimāna</em> (“self pride”) the final item. Here in SĀ, “ignorance” is the final item, and only “pride” (rather than “self pride”) is mentioned. This list of six items doesn’t appear to have been a standardized list in Sarvāstivāda Abhidharma, though the individual items do appear in other contexts. [\[back\]](#ref3)
-4. {:#n4} <em>multi-story building</em>. C.樓閣, P. <em>kūṭāgāra</em>. I’m not entirely sure exactly what type of building is meant here. It may refer to a lookout like a belvedere atop a multi-story building or the upper levels of a tower. 樓閣 typically translated P/S. <em>kūṭāgāra</em>, as it did here judging by the P. parallel. [\[back\]](#ref4)
-5. {:#n5} <em>fit inside of it</em>. C. 能攝受. Lit. “can accept.” I’ve translated “accept” here to mean “fit into.” [\[back\]](#ref5)
+The conclusions also provide different explanations about how the concept of impermanence eliminates craving, etc. The P. <em>sutta</em> ties it to recognizing the five aggregates, their origin, and their passing away. The C. <em>sūtra</em> says that contemplating impermanence leads to the realization of selflessness. This eliminates self pride, which in turn leads to the attainment of <em>nirvāṇa</em>. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>cultivated and cultivated often</em>. C. 修習多修習, P. <em>bhāvita bahulīkata</em>. 多修習 (“to often cultivate”) fits a lit. reading of P. <em>bahulīkata</em>, which is a compound of <em>bahulī</em> (“much, often”) and <em>kata</em> (“done”). [<a href="#ref2">back</a>]</li>
+<li id="n3"><em>can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</em> C. 能斷一切欲愛、色愛、無色愛、掉、慢、無明, P. <em>sabbaṁ kāmarāgaṁ pariyādiyati, sabbaṁ rūparāgaṁ pariyādiyati, sabbaṁ bhavarāgaṁ pariyādiyati, sabbaṁ avijjaṁ pariyādiyati, sabbaṁ asmimānaṁ samūhanati</em>. The three cravings of desire, form, and formlessness refer to the desire to be reborn in the three realms of existence (presumably, the heavens of the desire realm, the form realm, and the formless realm). Interestingly, the P. parallel has <em>bhavarāga</em> (“craving of existence”) rather than <em>arūparāga</em> (“craving of formlessness”), which seems intended to make it clear that the first two items refer to realms of rebirth. Other differences are that the P. parallel doesn’t include “agitation” and makes <em>asmimāna</em> (“self pride”) the final item. Here in SĀ, “ignorance” is the final item, and only “pride” (rather than “self pride”) is mentioned. This list of six items doesn’t appear to have been a standardized list in Sarvāstivāda Abhidharma, though the individual items do appear in other contexts. [<a href="#ref3">back</a>]</li>
+<li id="n4"><em>multi-story building</em>. C.樓閣, P. <em>kūṭāgāra</em>. I’m not entirely sure exactly what type of building is meant here. It may refer to a lookout like a belvedere atop a multi-story building or the upper levels of a tower. 樓閣 typically translated P/S. <em>kūṭāgāra</em>, as it did here judging by the P. parallel. [<a href="#ref4">back</a>]</li>
+<li id="n5"><em>fit inside of it</em>. C. 能攝受. Lit. “can accept.” I’ve translated “accept” here to mean “fit into.” [<a href="#ref5">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 4 April 2024</p>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 18 January 2024
-{: .revised}
-
----
+<hr/>
