Added source links

--- a/01_agama/samyukta/01/SA1_138.md
+++ b/01_agama/samyukta/01/SA1_138.md
@@ -98,9 +98,10 @@ next: SA1_143.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.60" target="_blank">SN 22.60</a>. [<a href="#ref1">back</a>]</li>
+<li id="n1">This is <em>sūtra</em> no. 81 in the <cite>Taisho</cite> edition and no. 138 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0020b28" target="_blank">T99.2.20b28-1a24</a>). It’s parallel with <a href="https://suttacentral.net/sn22.60" target="_blank">SN 22.60</a>. [<a href="#ref1">back</a>]</li>
 <li id="n1"><em></em>. C. 摩訶男 (EMC. mua-ha-nəm = Pr. <em>mahanam[a]</em>), P. <em>mahāli</em>. This was a common transliteration for the disciple Mahānāma, but this is not the same person here in this <em>sūtra</em>. In SN 22.60, his name is Mahāli. [<a href="#ref1">back</a>]</li>
 </ol>
+
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
