--- a/01_agama/samyukta/01/SA1_143.md
+++ b/01_agama/samyukta/01/SA1_143.md
@@ -15,7 +15,7 @@ next: SA1_145.html
   <th class='en'>143 (86). Impermanent</th>
   <tr>
     <td title='t125.2.22a6'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td title='t125.2.22a7'>爾時，世尊告諸比丘：「若無常色有常者，彼色不應有病、有苦，亦不應於色有所求，欲令如是、不令如是。以色無常故，於色有病、有苦生，亦得不欲令如是、不令如是。受、想、行、識亦復如是。比丘！於意云何？色為常、為無常耶？」</td>
@@ -53,7 +53,15 @@ next: SA1_145.html
     <td title='t125.2.22a23'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p7'>7. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
-</table> 
+</table>
+
+<hr/>
+
+<h3 id="notes">Notes</h3>
+
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 86 in the <cite>Taisho</cite> edition and no. 143 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0022a06" target="_blank">T99.2.22a6-24</a>). [<a href="#ref1">back</a>]</li>
+</ol>
 
 <hr/>
 
