--- a/01_agama/samyukta/01/SA1_50.md
+++ b/01_agama/samyukta/01/SA1_50.md
@@ -60,7 +60,7 @@ next: SA1_51.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This <em>sūtra</em> is a variant of the previous one (which is parallel to <a href="https://suttacentral.net/sn22.99" target="_blank">SN 22.99</a>) and parallel with <a href="https://suttacentral.net/sn22.100" target="_blank">SN 22.100</a>. The main feature of both this version and SN 22.100 is the metaphor of the dog tied to a post, which limits its range of movement. This metaphor is then used to illustrate how sentient beings are trapped in domains defined by the five aggregates until they escape rebirth. The P. version says the dog sits near the post, while this version uses an expression that means the dog orbits (turns around) the post.<br/>
+<li id="n1">This is <em>sūtra</em> no. 267 in the <cite>Taisho</cite> edition and no. 50 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0069c02" target="_blank">T99.2.69c2-70a11</a>). It’s a variant of the previous one (which is parallel to <a href="https://suttacentral.net/sn22.99" target="_blank">SN 22.99</a>) and parallel with <a href="https://suttacentral.net/sn22.100" target="_blank">SN 22.100</a>. The main feature of both this version and SN 22.100 is the metaphor of the dog tied to a post, which limits its range of movement. This metaphor is then used to illustrate how sentient beings are trapped in domains defined by the five aggregates until they escape rebirth. The P. version says the dog sits near the post, while this version uses an expression that means the dog orbits (turns around) the post.<br/>
 The next metaphor, which asserts that diversity of form is the result of diversity of mind, uses the example of a colorful bird. The P. version is unclear whether the metaphor is about a bird or a painting, though the meaning is not impacted much by it. I discuss the language issues in the notes below. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>I don’t see a single form as varied as a multi-colored bird, but its mind goes beyond that. … That animal’s form is diverse because its mind is diverse.</em> C. 我不見一色種種如斑色鳥，心復過是。⋯彼畜生心種種故，色種種。 P. <em>Diṭṭhaṁ vo, bhikkhave, caraṇaṁ nāma cittan”ti? … Tampi kho, bhikkhave, caraṇaṁ nāma cittaṁ citteneva cittitaṁ. Tenapi kho, bhikkhave, caraṇena cittena cittaññeva cittataraṁ.</em> The P. passage here is confusing since the word for both “mind” and “colorful” is P. <em>citta</em> (whereas, they are <em>citta</em> and <em>citra</em> respectively in S.). It does indicate that P. <em>caraṇa</em> is a proper name, but this term is also confusing because it can mean “conduct” or “painting.” The C. passage makes it clear what these words were intended to mean, or at least presents us with an interpretation that’s coherent. In any case, the P. version will reference animals when this passage is repeated, giving us more confidence that it indeed should be read like the C. version. See the next note for more on the language issues involved. [<a href="#ref2">back</a>]</li>
 <li id="n3"><em>cāraṇa bird.</em> C. 嗟蘭那鳥 (EMC. tsiă-lan-na + “bird” = G. <em>carana</em>?). In the P. passage, <em>cāraṇa</em> again appears to be a standalone noun meaning “colorful painting.” Here, however, it’s the name of a bird that apparently was quite colorful and looked like it was painted. I can’t help but notice a couple hints at what has happened here in my search for clues about it.<br/>
