--- a/01_agama/samyukta/01/SA1_57.md
+++ b/01_agama/samyukta/01/SA1_57.md
@@ -40,7 +40,7 @@ next: SA1_58.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This is <em>sūtra</em> no. 60 in the <cite>Taisho</cite> edition and no. 57 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0015b22" target="_blank">T99.2.71c14-2b13</a>). While it is listed by some as having <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a> as a parallel, there is only a tangential resemblance. The P. <em>sutta</em> mentions a monk understanding the origin and end of the five aggregates through meditative insight, but here there is no explicit mention of <em>samādhi</em>. There are certainly a number of shared passages, but they have been assembled into somewhat different texts. [<a href="#ref1">back</a>]</li>
+<li id="n1">This is <em>sūtra</em> no. 60 in the <cite>Taisho</cite> edition and no. 57 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0015b22" target="_blank">T99.2.15b22-c13</a>). While it is listed by some as having <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a> as a parallel, there is only a tangential resemblance. The P. <em>sutta</em> mentions a monk understanding the origin and end of the five aggregates through meditative insight, but here there is no explicit mention of <em>samādhi</em>. There are certainly a number of shared passages, but they have been assembled into somewhat different texts. [<a href="#ref1">back</a>]</li>
 </ol>
 <hr/>
 
