--- a/01_agama/samyukta/01/SA1_53.md
+++ b/01_agama/samyukta/01/SA1_53.md
@@ -64,7 +64,7 @@ next: SA1_54.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This <em>sūtra</em> has a direct parallel at <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.102</a>. While the two versions of this <em>sūtra</em> are very similar and clearly derive from a common source, there are a couple divergences.<br/>
+<li id="n1">This is <em>sūtra</em> no. 270 in the <cite>Taisho</cite> edition and no. 53 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0070c02" target="_blank">T99.2.70c2-1a3</a>). It has a direct parallel at <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.102</a>. While the two versions of this <em>sūtra</em> are very similar and clearly derive from a common source, there are a couple divergences.<br/>
 First, the metaphors employed are a little different. In the P. <em>sutta</em>, there are ten parables: the farmer plowing, cutting grass, mango fruit falling, rafters of a house, fragrant roots, fragrant woods, fragrant flowers, the wheel-turning king, the radiance of the moon, and the sun dispelling darkness. This <em>sūtra</em> in SĀ has eight metaphors: the farmer plowing, cutting grass, mango fruit falling, timbers of a building, the elephant’s footprint, the ocean, the sun dispelling darkness, and the wheel-turning king. Comparing these two sets of metaphors, we can see that five are shared and in the same order except for the sunrise, which is placed last in the P. <em>sutta</em>. From this, I would assume that the original version did include a set of parables, but perhaps only four or five of them.<br/>
 The conclusions also provide different explanations about how the concept of impermanence eliminates craving, etc. The P. <em>sutta</em> ties it to recognizing the five aggregates, their origin, and their passing away. The C. <em>sūtra</em> says that contemplating impermanence leads to the realization of selflessness. This eliminates self pride, which in turn leads to the attainment of <em>nirvāṇa</em>. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>cultivated and cultivated often</em>. C. 修習多修習, P. <em>bhāvita bahulīkata</em>. 多修習 (“to often cultivate”) fits a lit. reading of P. <em>bahulīkata</em>, which is a compound of <em>bahulī</em> (“much, often”) and <em>kata</em> (“done”). [<a href="#ref2">back</a>]</li>
